fix(UI): updated notes overflow, common scrollbar UI & notes, boards content same as input

--- a/src/styles/NoteList.css
+++ b/src/styles/NoteList.css
@@ -23,18 +23,40 @@
 /* NoteList.css */
 .note-list {
   display: flex;
-  box-sizing: border-box;
-  position: fixed;
 }
 
 .notes-container {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  overflow-y: auto;
+  height: 500px;
+  width: 80%;
+  margin: 0 auto;
+  padding: 0.5em;
 }
 
-.filter-notes {
-  margin-left: 1em;
+.notes-container::-webkit-scrollbar {
+  width: 8px;
+  background-color: #f1f1f1; 
+  border-radius: 8px;
+}
+
+.notes-container::-webkit-scrollbar-thumb {
+  background-color: lightseagreen; 
+  border-radius: 8px; 
+  transition: background-color 0.3s ease-in-out; 
+}
+
+.notes-container::-webkit-scrollbar-thumb:hover {
+  background-color: lightgreen; 
+}
+
+.notes-container::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+  border-radius: 8px; 
 }
 
 .note {
@@ -81,7 +103,9 @@
   color: #333333;
   font-size: 1em;
   font-weight: bold;
+  white-space: pre-wrap;
 }
+
 
 .note-ellipse-btn {
   position: relative;
@@ -121,6 +145,7 @@
   flex-direction: column;
   border: #333;
   font-size: 1em;
+  font-weight: bold;
   font-family: inherit;
   outline: none;
   resize: none;
